[package]
authors = ["The Rust Project Developers"]
name = "rustc_traits"
version = "0.0.0"
edition = "2018"

[lib]
name = "rustc_traits"
path = "lib.rs"

[dependencies]
log = { version = "0.4" }
rustc_middle = { path = "../librustc_middle" }
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_hir = { path = "../librustc_hir" }
rustc_index = { path = "../librustc_index" }
rustc_ast = { path = "../librustc_ast" }
rustc_span = { path = "../librustc_span" }
#chalk-ir = "0.14.0"
#chalk-solve = "0.14.0"
chalk-ir = { git = "https://github.com/rust-lang/chalk.git", rev = "2bd06ea1cac18cc83958667122d3d4488f6a9835" }
chalk-solve = { git = "https://github.com/rust-lang/chalk.git", rev = "2bd06ea1cac18cc83958667122d3d4488f6a9835" }
smallvec = { version = "1.0", features = ["union", "may_dangle"] }
rustc_infer = { path = "../librustc_infer" }
rustc_trait_selection = { path = "../librustc_trait_selection" }
